--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <button type="button" class="form-btn">Log In</button>
 <div class="form-bottom">
   
-  <a href="#" class="forgot-pass">
+  <a href="https://www.facebook.com/login/identify/?ctx=recover&ars=facebook_login&from_login_screen=0" class="forgot-pass">
     Forgotten Password?
   </a>
   <hr>
@@ -38,7 +38,7 @@
         
           
       </div>
-      <p class="bottom-text">  <a href="" class="bottom-text-link">Create a Page</a> for a celebraty, brand or business</p>
+      <p class="bottom-text">  <a href="https://www.facebook.com/pages/create/?ref_type=registration_form" class="bottom-text-link">Create a Page</a> for a celebraty, brand or business</p>
 
 
   </div>
